# tcg

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
contracts/: TCGInventory.sol
db/: add_is_admin_column.sql  init.js  migrate.js  schema.sql
server/: server.js  sidecar-entry.js
site/: app.js  db.js  index.html  inventory.js  style.css  wallet.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsh
src-tauri/src/: lib.rs  main.rs
